--- a/deployment.yml
+++ b/deployment.yml
@@ -55,3 +55,15 @@ spec:
                 secretKeyRef:
                   name: postgres-credentials
                   key: postgres_password
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: springboot-jenkins
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+  selector:
+    app: springboot-jenkins
